# tftp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: http_server.rs  main.rs  server.rs  tftp_protocol.rs  ui.rs
tests/: integration.rs
